--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -239,21 +239,60 @@ $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$; $\sum_j^2\beta_j=
 ### Problem 1: 
 Note: This is a $2^3$ design with replications for each treatment combination. Analyze the data as a typical 3-factor factorial design.
 In part (a), do all the necessary tests and report conclusions along with p values appropriately.
-In part (b), provide plots along with your answer.
-In Part(c), clearly recommend which factor levels appropriately in question context and provide reasons.
 
 ```{r echo=F, message=F, results='hold', out.width='30%'}
 hw2_1_table <- readxl::read_excel("Table6_6.xlsx")
-hw2_1_table%>%mutate(hw2_1_rep=c(rep(c(1,2),8)))
-hw2_1_table_mean <- hw2_1_table%>%group_by(A,B,C)%>%summarise(mean_y=mean(y))
-hw2_1_model_mean <- aov(mean_y~A*B*C,hw2_1_table_mean)
-hw2_1_effect <- coef(hw2_1_model_mean)[2:8]
-daewr::halfnorm(hw2_1_effect,alpha=0.55)
-hw2_1_model <- aov(y~A*C,hw2_1_table)
+hw2_1_table$A <- as.factor(hw2_1_table$A)
+hw2_1_table$B <- as.factor(hw2_1_table$B)
+hw2_1_table$C <- as.factor(hw2_1_table$C)
+kableExtra::kable(t(hw2_1_table)) %>%kableExtra::kable_styling("striped", full_width = F)
+library(ggpubr)
+ggline(data = hw2_1_table, x = "A", y = "y", add = c("mean", "jitter"),shape= "B",  color = "C", linetype = "C", ylab= "y", xlab="A")
+
+hw2_1_table <- hw2_1_table%>%mutate(hw2_1_rep=c(rep(c(1,2),8)))
+hw2_1_model <- aov(y~A*B*C,hw2_1_table)
 pander::pander(summary(hw2_1_model))
+
+hw2_1_effect<- coef(hw2_1_model)[2:8]
+daewr::halfnorm(hw2_1_effect,alpha=0.55)
+
+# hw2_1_model_non_neg <- aov(y~A*C,hw2_1_table)
+# pander::pander(summary(hw2_1_model_non_neg))
+```
+Based on ANOVA table, factor C, AC, BC have significant effects at 0.05 significance level. Their P-values are 0.008516, 0.0004176, 0.003728 respectivly. Although the effect of factor AB is not significant at 0.05 significance level (P-value=0.005602), keeping it in the model is recommended.
+
+Base on the half-normal quantiles plot, only the effect of factor ABC is negligible after estimating all effects. 
+
+ ---
+
+In part (b), provide plots along with your answer.
+
+```{r echo=F, message=F, results='hold', out.width='30%'}
+hist(hw2_1_table$y)
 plot(hw2_1_model)
 ```
 
+The histogram of residuals does not satisfied the normality assumption. This could be caused by the response values being the mean values in each group receiving each treatment combination with 1000 customers. The QQ plot didn't show obvious violation of normality.
+
+The plot of residuals versus fitted value shows the residuals are evenly distributed about zero at each prededict value (zero mean). A few outliers are acceptable.
+
+The plot of studentized residuals versus fitted value shows vertical deviations of residuals from zero are almost the same for each predicted value (constant variance) with respect to the small sample size.
+
+ ---
+
+In Part(c), clearly recommend which factor levels appropriately in question context and provide reasons.
+
+The result shows the interaction effects of ABC is negligible.
+
+```{r echo=F, message=F, results='hold', out.width='30%'}
+# hw2_1_table_mean <- hw2_1_table%>%group_by(A,B,C)%>%summarise(mean_y=mean(y))
+# hw2_1_model_mean <- aov(mean_y~A*B*C,hw2_1_table_mean)
+# pander::pander(summary(hw2_1_model_mean))
+
+# hw2_1_model_ln <- lm(log(y)~A+C,hw2_1_table)
+# pander::pander(summary(hw2_1_model_ln))
+# plot(hw2_1_model_ln)
+```
 
 
 ### Problem 2:
@@ -288,16 +327,16 @@ The complete model you would fit for these data based on the finding.
 
 The single replicate $2^4$ factorial model with confounde ABCD effect as blocks, and without neglegible terms is:
 
-$$y_{ij}=\mu+\tau_i+\beta_{blk}+\varepsilon_{ij}$$
-for $i=1,2$ ; $blk=1,2$; $j=1,2,3,4$, where 
+$$y_{ijk}=\mu+\tau_i+\beta_{j}+\varepsilon_{ijk}$$
+for $i=1,2$ ; $j=1,2$; $k=1,2,3,4$, where 
 
 $\tau_i$ is fixed main effect of $i^{th}$ level of  Factor D;
 
-$\beta_{blk}$ is effect of $j^{th}$ level of block;
+$\beta_{j}$ is effect of $j^{th}$ level of block;
 
-$\varepsilon_{ij}$ is random error for the four replicates Exerimental Unit when $i^{th}$ level of Factor D and $j^{th}$ level of block are applied.
+$\varepsilon_{ijk}$ is random error for the $k^{th}$ replicate Exerimental Units when $i^{th}$ level of Factor D and $j^{th}$ level of block are applied.
 
-$y_{ijk}$ is response for the 4 replicate EU when  $i^{th}$ level of Factor D and  $j^{th}$ level of block are applied.
+$y_{ijk}$ is response for the $k^{th}$ replicate EU when  $i^{th}$ level of Factor D and  $j^{th}$ level of block are applied.
 
 Assumptions:
 
@@ -332,12 +371,25 @@ sum((hw2_2_table$hw2_2_y- mean(hw2_2_table$hw2_2_y))^2)
 Consider the single replicated $2^3$ factorial design with ABC confounded with two blocks.
 Prove algebraically the $SS_{ABC}=SS_{Block}$ (see the example did in class for $2^2$ design)
 
-$$SS_{ABC}=\frac{n}{2^k}C_{ABC}^2=\frac{1}{2^3}(-\bar y_{(1)}+\bar y_{a}+\bar y_{b}-\bar y_{ab}+\bar y_{c}-\bar y_{ac}-\bar y_{bc}+\bar y_{abc})^2$$
+Factor ABC is confounded with two blocks, $p=2$
+
+$$C_{ABC}=-y_{(1)}+ y_{a}+y_{b}- y_{ab}+ y_{c}- y_{ac}- y_{bc}+ y_{abc}$$
+
+$$SS_{ABC}=\sum_i^2\sum_j^2\sum_k^2(\hat\tau\hat\beta\hat\gamma)_{ijk}^2=[\frac12(y_{211}-y_{111})-\frac12(y_{221}-y_{121})-\frac12(y_{212}-y_{112})+\frac12(y_{222}-y_{122})]^2$$
+
+$$=\frac1{2^2}(-y_{111}+y_{211}+y_{121}-y_{221}+y_{112}-y_{212}-y_{122}+y_{222})^2=\frac{1}{2^2}C_{ABC}^2$$
 
 $$SS_{Block}=\sum_i^2\sum_j^2\sum_k^2\sum_l^2\hat\delta_l^2=2^3(\delta_1^2+\delta_2^2)=2^3[(\bar y_{blk1}-\bar y_{...})^2+(\bar y_{blk2}-\bar y_{...})^2]$$
 
-$$=2^3[(\frac{1}{2^3}[\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}]-\frac{1}{2^3}y_{...})^2+(\frac{1}{2^3}[\bar y_{a}+\bar y_{b}+\bar y_{c}+\bar y_{abc}]-\frac{1}{2^3}\bar y_{...})^2]$$
-$$=\frac{1}{2^3}[(\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}-y_{...})^2+(\bar y_{a}+\bar y_{b}+\bar y_{c}+\bar y_{abc}-\bar y_{...})^2]$$
+$\bar y_{blk1}-\bar y_{...}=\frac{1}{4}[y_{(1)}+y_{ab}+y_{ac}+y_{bc}]-\bar y_{...}=\frac{1}{4}[y_{111}+y_{221}+y_{212}+y_{122}]-\frac{1}{8}[y_{111}+y_{211}+y_{121}+y_{221}+y_{112}+y_{212}+y_{122}+y_{222}]$
+
+$=\frac{1}{8}[y_{111}-y_{211}-y_{121}+y_{221}-y_{112}+y_{212}+y_{122}-y_{222}]=\frac18[y_{(1)}-y_{a}-y_{b}+y_{ab}-y_{c}+ y_{ac}+y_{bc}-y_{abc}]=-\frac18C_{ABC}$
+
+By the same way, $\bar y_{blk2}-\bar y_{...}=\frac18C_{ABC}$
+
+Therefore,
+
+$$SS_{Block}=2^3[(-\frac18C_{ABC})^2+(\frac18C_{ABC})^2]=\frac1{2^2}C_{ABC}^2=SS_{ABC}$$
 
 
 ### Problem 4:
