--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -380,7 +380,7 @@ When $\theta< k\le\theta+1\le1$, a part of $Y_1$ locate inside the $k\le Y_1$ re
 The power function $=P(Y_1\ge k\cup Y_n\ge 1|\theta>0)=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1=(\theta+1-k)^n$
 
 When $\theta\le k\le1\le\theta+1$, a part of $Y_1$ locate inside the $k\le Y_1\le\theta+1$ rejection region, a part of $Y_n$ locate inside the $1\le Y_n$ rejection region.
-The power function$=P(k\le Y_1\le\theta+1|\theta>0)+P(\theta\le Y_1\le k,1\le Y_n\le\theta+1 |\theta>0)=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1+\int_\theta^k\int_1^{\theta+1}n(n-1)(y_n-y_1)^{n-2}dy_ndy_1=(\theta+1-k)^n+\int_\theta^kn[(\theta+1-y_1)^{n-1}-(1-y_1)^{n-1}]dy_1=(\theta+1-k)^n-(\theta+1-k)^n+1+(1-k)^n-(1-\theta)^{n}=1+\alpha-(1-\theta)^n$
+The power function$=P(k\le Y_1\le\theta+1|\theta>0)+P(\theta\le Y_1\le k,1\le Y_n\le\theta+1 |\theta>0)=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1+\int_\theta^k\int_1^{\theta+1}n(n-1)(y_n-y_1)^{n-2}dy_ndy_1$ $=(\theta+1-k)^n+\int_\theta^kn[(\theta+1-y_1)^{n-1}-(1-y_1)^{n-1}]dy_1=(\theta+1-k)^n-(\theta+1-k)^n+1+(1-k)^n-(1-\theta)^{n}=1+\alpha-(1-\theta)^n$
 
  ---
  
