--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -372,12 +372,12 @@ Thus, use $k=1-\alpha^{1/n}, 0\le k\le1$ to have a size $\alpha$ test.
 
 The rejection regions are $Y_1\ge k$ and $Y_n\ge 1$. 
 
-When $\theta+1\le k\le1$, all $Y_1$ and $Y_n$ locate outside the rejection region. The power function$=P(\text{reject} H_0|H_1\text{true})=P(Y_1\ge k\cup Y_n\ge 1|\theta>0)=0$
+When $\theta+1\le k\le1$, all $Y_1$ and $Y_n$ locate outside the rejection region, the power function$=P(\text{reject} H_0|H_1\text{true})=0$
 
-When $0< k\le\theta$, all $Y_1$ and $Y_n$ locate inside the rejection region. $\beta(\theta)=P(\text{reject} H_0|H_1\text{true})=P(Y_1\ge k\cup Y_n\ge 1|\theta>0)=1$
+When $0< k\le\theta$, all $Y_1$ and $Y_n$ locate inside the rejection region, the power function$=P(Y_1\ge k\cup Y_n\ge 1|\theta>0)=1$
 
-When $\theta< k\le\theta+1\le1$, a part of $Y_1$ locate inside the $k\le Y_1$ rejection region. All $Y_n$ locate outside the $1\le Y_n$ rejection region.
-The power function $=P(Y_1\ge k\cup Y_n\ge 1|\theta>0)=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1=(\theta+1-k)^n$
+When $\theta< k\le\theta+1\le1$, a part of $Y_1$ locate inside the $k\le Y_1$ rejection region. All $Y_n$ locate outside the $1\le Y_n$ rejection region, 
+the power function $=P(Y_1\ge k|\theta>0)+0=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1=(\theta+1-k)^n$
 
 When $\theta\le k\le1\le\theta+1$, a part of $Y_1$ locate inside the $k\le Y_1\le\theta+1$ rejection region, a part of $Y_n$ locate inside the $1\le Y_n$ rejection region.
 The power function$=P(k\le Y_1\le\theta+1|\theta>0)+P(\theta\le Y_1\le k,1\le Y_n\le\theta+1 |\theta>0)=\int_k^{\theta+1}(\theta+1-y_1)^{n-1}dy_1+\int_\theta^k\int_1^{\theta+1}n(n-1)(y_n-y_1)^{n-2}dy_ndy_1$ $=(\theta+1-k)^n+\int_\theta^kn[(\theta+1-y_1)^{n-1}-(1-y_1)^{n-1}]dy_1=(\theta+1-k)^n-(\theta+1-k)^n+1+(1-k)^n-(1-\theta)^{n}=1+\alpha-(1-\theta)^n$
@@ -391,11 +391,11 @@ $(Y_1, Y_n)$ are sufficient statistics for $\theta$.
 
 For $0<\theta<1$, the ratio of pdfs is
 
-$$\frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}=\begin{cases}0& \text{if }\ 0<y_1\le\theta,y_1<y_n<1 \\1& \text{if }\ \theta<y_1<y_n<1 \\\infty& \text{if }\ 1\le y_n<\theta,\theta<y_1<y_n \end{cases}$$
+$$\frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}=\begin{cases}0& \text{if }\ 0<y_1\le\theta,y_1<y_n<1 \\1& \text{if }\ \theta<y_1<y_n<1 \\\infty& \text{if }\ \theta<y_1<y_n, 1\le y_n<\theta+1 \end{cases}$$
 
 For $1\le\theta$, the ratio of pdfs is
 
-$$\frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}=\begin{cases}0& \text{if }\ y_1<y_n<1 \\\infty& \text{if }\ \theta<y_1<y_n<\theta+1 \end{cases}$$
+$$\frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}=\begin{cases}0& \text{if }\ y_1<y_n<1\le\theta \\\infty& \text{if }\ 1\le\theta<y_1<y_n<\theta+1 \end{cases}$$
 
 For $0<\theta<k$, use $k'=1$, 
 
@@ -405,10 +405,10 @@ For $\theta\ge k$, use $k'=0$,
 
 $$\begin{cases}\text{reject}& \text{if }\ \frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}>0 \\\text{fail to reject}& \text{if }\ \frac{f_{Y_{1},Y_{n}}(y_1,y_n|\theta)}{f_{Y_{1},Y_{n}}(y_1,y_n|0)}<0 \end{cases}$$
 
-Form **Corollary 8.3.13**, $(Y_1,Y_n)$ is a sufficient statistic for $\theta$ and $g(y|\theta)$ is the pdf of $Y$ corresponding to $\theta_0,\theta_1$.  if it satisfies 
-$y_1\in S_1$, $y_n\in S_n$ if $f(y_1,y_n|\theta_1)>kf(y_1,y_n|\theta_0)$ and $y_1\in S_1^c$, $y_n\in S_n^c$ if $f(y_1,y_n|\theta_1)<kf(y_1,y_n|\theta_0)$ for some $k\ge 0$, where $\alpha=P_{\theta_0}(y_1\in S_1,y_n\in S_n)$
+Form **Corollary 8.3.13**, $(Y_1,Y_n)$ is a sufficient statistic for $\theta$ and $f(y_1,y_n|\theta)$ is the pdf of $(Y_1,Y_n)$ corresponding to $\theta_0,\theta_1$.  if it satisfies 
+$y_1\in S_1$, $y_n\in S_n$ when $f(y_1,y_n|\theta_1)>kf(y_1,y_n|\theta_0)$ and when $f(y_1,y_n|\theta_1)<kf(y_1,y_n|\theta_0)$ for some $k\ge 0$, where $\alpha=P_{\theta_0}(y_1\in S_1,y_n\in S_n)$,
 
-Therefore, the test based on $(Y_1,Y_n)$ with rejection regions $Y_1\ge k$ and $Y_n\ge 1$ is a UMP level a test.
+then, the test based on $(Y_1,Y_n)$ with rejection regions $Y_1\ge k$ and $Y_n\ge 1$ is a UMP level a test.
 
  ---
  
